--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url("./fonts/OpenSans-Regular.ttf") format("truetype"),
+       url("./fonts/OpenSans-Bold.ttf") format("truetype");
+}
+
 body {
+  font-family: "Open Sans";
   margin: 0;
 }
 
