--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  color: #555;
   font-family: "Open Sans";
   margin: 0;
 }
@@ -21,15 +22,19 @@ body {
     "cta-group"; 
 }
 
-.btn {
-  border-radius: 4px;
-  margin: 8px;
-  padding: 8px;
+.icon {
+  height: 20px;
+  width: 20px;
 }
 
-.btn img {
-  height: 24px;
-  width: 24px;
+.icon-arrow-left {
+  fill: #ccc;
+}
+
+.btn {
+  border-radius: 4px;
+  color: #555;
+  padding: 8px;
 }
 
 .btn:hover {
@@ -47,7 +52,7 @@ body {
 }
 
 .btn--with-icon span {
-  margin-left: 4px;
+  margin-left: 12px;
 }
 
 .image img {
