--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,12 @@ body {
   text-align: center;
 }
 
+.navigation,
+.main-content,
+.cta-group {
+  padding: 16px 32px;
+}
+
 @media only screen and (min-width: 768px) {
   .App {
     grid-template-columns: 1fr 1fr; 
