--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,20 @@ body {
   padding: 16px 32px;
 }
 
+.product-header h1 {
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 4px 0;
+}
+
+.product-header h2 {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: #ccc;
+  margin: 4px 0;
+}
+
 @media only screen and (min-width: 768px) {
   .App {
     grid-template-columns: 1fr 1fr; 
