--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,25 @@ body {
   margin-left: 12px;
 }
 
+.btn--tab {
+  border-radius: 0;
+  font-size: 0.7em;
+  font-weight: bold;
+  margin-right: 32px;
+  position: relative;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+.btn--tab:hover {
+  background-color: unset;
+  border-bottom: 3px solid #ccc;
+}
+
+.btn--tab-active {
+  border-bottom: 3px solid #1f7bfc;
+}
+
 .image img {
   width: 100%;
 }
@@ -82,6 +101,24 @@ body {
   font-weight: bold;
   color: #ccc;
   margin: 4px 0;
+}
+
+.product-description {
+  margin-top: 48px;
+}
+
+.tab-group {
+  position: relative;
+}
+
+.tab-group::after {
+  content: ' ';
+  display: block;
+  border-bottom: 1px solid #eee;
+  bottom: 1px;
+  left: -32px;
+  right: -32px;
+  position: absolute;
 }
 
 @media only screen and (min-width: 768px) {
