--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,22 @@ body {
   border-bottom: 3px solid #1f7bfc;
 }
 
+.btn--primary {
+  background-color: #1f7bfc;
+  color: #fff;
+}
+
+.btn--primary:hover {
+  background-color: #1f5bcc;
+}
+
+.add-to-cart__btn {
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 1.6em 5em;
+}
+
 .image img {
   width: 100%;
 }
@@ -158,6 +174,7 @@ body {
   background-color: transparent;
   border: 1px solid #aaa;
   border-radius: 4px;
+  cursor: pointer;
   margin-top: 8px;
   padding: 8px 12px;
   position: relative;
@@ -198,6 +215,7 @@ body {
 
   .cta-group {
     grid-area: cta-group;
+    text-align: left;
   }
 
   .navigation,
