feat(AddToCartButton): use fix width

--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,8 @@ body {
   cursor: pointer;
   font-weight: bold;
   text-transform: uppercase;
-  padding: 1.6em 5em;
+  padding: 1.6em;
+  width: 232px;
 }
 
 .image {
